# wasm-conway-life

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  www.sh
old/: index.old.js
src/: lib.rs
www/: conway_life.js  conway_life_bg.wasm  index.html  index.js
www/src/: conway_life.js  index.js
