[package]
name = "conway_life"
version = "0.1.0"
authors = ["DaBigBlob <_@hman.io>"]
description = "my first wasm project"
license = "BSD-3-Clause"
repository = "https://github.com/DaBigBlob/wasm-conway-life"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }
js-sys = "0.3.65"

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[profile.release]
opt-level = 3
